--- a/src/assets/scss/Theme.scss
+++ b/src/assets/scss/Theme.scss
@@ -1,4 +1,5 @@
 .theme-dark {
+  --edge-margin: 2px;
   --color-scheme: dark;
   --background-primary: #101010;
   --background-tilt: #101010;
@@ -10,8 +11,8 @@
   --text-content: rgba(255, 255, 255, 0.86);
   --text-content-descr: rgba(255, 255, 255, 0.6);
 
-  --border-primary: #474750;
-  --border-card: #4747568a;
+  --border-primary: #3f3f3f;
+  --border-card: #3f3f3f8a;
   --border-mix: #57576088;
   --border-secondary: #696967;
 
