--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -9,14 +9,14 @@ html, body{
 
 .contentMain {
   position:absolute;
-  width:100%;
-  height:100%;
+  height: calc(100% - 1px);
+  width: calc(100% - 1px);
 
   #main-l{
     position: relative;
     display: flex;
     flex-flow: column;
-    height: calc(100% - 4px);
+    height: calc(100%);
   }
 }
 
