--- a/src/assets/scss/components/Canvas.scss
+++ b/src/assets/scss/components/Canvas.scss
@@ -1,26 +1,10 @@
 @import "../Theme";
 
-.three{
-  flex: 0 1 35px;
-  width:calc(100% - var(--size-margin));
-  max-width:calc(100% - var(--size-margin));
-  margin: var(--box-margin);
-  margin-bottom:0;
-  border: $tableBorder;
-
-  canvas {
-    width: 450px!important;
-    height:80px!important;
-  }
-}
-
 .forceGraph{
   padding:5px;
   flex: 0 1 125px;
-  width:calc( 100% - var(--size-margin));
-  margin: var(--box-margin);
-  margin-bottom: 0px;
-  margin-top:0px;
+  margin-right: var(--box-margin);
+  margin-left: var(--edge-margin);
   border: $tableBorder;
 
   .fg{
