--- a/src/assets/scss/components/MixtapeView.scss
+++ b/src/assets/scss/components/MixtapeView.scss
@@ -2,10 +2,13 @@
 
 .mixtape-pane{
   margin: var(--box-margin);
+  margin-top: var(--edge-margin);
+  margin-left: var(--edge-margin);
   flex: 1 1 auto;
   overflow-y: hidden;
   display: flex;
   flex-direction: column;
+
   .folders{
     height: fit-content;
     max-height: 20%;
@@ -13,7 +16,7 @@
   .data-grid-splitter{
     width: 100%;
     height:9px;
-        opacity: 0.50;
+    opacity: 0.50;
     text-align: center;
   }
   .mixtapes{
