global store now using state, other api service store code cleanups/stronger types

--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -56,6 +56,9 @@ html, body{
 
   }
 }
+.os-scrollbar-horizontal{
+  display:none;
+}
 
 // Global Variables
 $tableBorder: 1px solid var(--border-primary);
