--- a/src/assets/scss/Theme.scss
+++ b/src/assets/scss/Theme.scss
@@ -29,6 +29,8 @@
 }
 
 .theme-light {
+
+  --edge-margin: 2px;
   --color-scheme: light;
   --background-primary: rgb(230, 230, 230);
   --background-tilt: rgba(230, 230, 230);
