--- a/src/assets/scss/components/ContentView.scss
+++ b/src/assets/scss/components/ContentView.scss
@@ -39,6 +39,7 @@
     padding: var(--box-margin);
     width: 100%;
     height: 100%;
+    min-height: 60px;
     overflow-y: hidden;
     overflow-x: hidden;
     white-space: pre-wrap;
