--- a/src/assets/scss/components/Tabs.scss
+++ b/src/assets/scss/components/Tabs.scss
@@ -68,7 +68,7 @@
 .tab-icon {
   height: calc(100% - 4px);
   width: 100%;
-
+    filter: saturate(1.5) hue-rotate(327deg);
 }
 
 .tab-width-standard {
