--- a/src/assets/scss/helpers/AddMixtape.scss
+++ b/src/assets/scss/helpers/AddMixtape.scss
@@ -2,13 +2,14 @@
 
 // Cog wheel settings menu
 .add-overlay{
-  position:absolute;
+  position:fixed;
+  top:0;
   width:100%;
   height:100%;
   z-index: 15;
   background: var(--lightbox-back);
-  -webkit-backdrop-filter: blur(14px);
-  backdrop-filter: blur(14px);
+  //-webkit-backdrop-filter: blur(14px);
+  //backdrop-filter: blur(14px);
 
   .add-mixtape{
     position: absolute;
@@ -18,18 +19,19 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 20;
-    height: 40%;
-    width: 70%;
-    max-width:541px;
+    height: 90px;
+    width: 300px;
 
     .uploader{
       background: var(--background-lightbox);
-      width: 80%;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      /* width: 100%; */
+      /* height: 100%; */
+      /* top: 50%; */
+      /* left: 50%; */
+      /* transform: translate(-50%, -50%); */
       position: relative;
       border: 1px solid var(--border-primary);
+      margin: 4px;
 
       .add-mixtape-title{
         background: var(--background-lightbox);
