--- a/src/assets/scss/helpers/EditView.scss
+++ b/src/assets/scss/helpers/EditView.scss
@@ -1,6 +1,7 @@
 // Cog wheel settings menu
 .overlay{
-  position:absolute;
+  position:fixed;
+  top:0;
   width:100%;
   height:100%;
   z-index: 15;
