--- a/src/assets/scss/components/ContentView.scss
+++ b/src/assets/scss/components/ContentView.scss
@@ -3,7 +3,7 @@
 .contentView{
   width: 100%;
   margin-right:var(--edge-margin);
-  min-height: 100%;
+  height: 100%;
 
   .p-dataview-content{
     z-index: 10;
@@ -22,7 +22,7 @@
       position: relative;
       justify-content: flex-end;
       align-items: flex-end;
-      margin-right: 5px;
+      margin-right: 4px;
 
     }
   }
