--- a/src/scss/helpers/UploadBox.scss
+++ b/src/scss/helpers/UploadBox.scss
@@ -1,5 +1,13 @@
 @import "../Theme";
 
+.customFileInput::-webkit-file-upload-button {
+  visibility: hidden;
+}
+
+.customFileInput::before {
+  content: 'select files';
+}
+
 // Cog wheel settings menu
 .upload-box{
   position: absolute;
