WE HAVE ACCESS AGAIN!! YAY!!

--- a/src/scss/Theme.scss
+++ b/src/scss/Theme.scss
@@ -12,7 +12,7 @@
   --text-content-descr: rgba(255, 255, 255, 0.6);
 
   --border-primary: #3f3f3f;
-  --border-card: #3f3f3f8a;
+  --border-card: #3f3f3fb5;
   --border-mix: #57576088;
   --border-secondary: #696967;
 
@@ -37,8 +37,8 @@
 
   --edge-margin: 2px;
   --color-scheme: light;
-  --background-primary: rgb(230, 230, 230);
-  --background-tilt: rgba(230, 230, 230);
+  --background-primary: #e6e6e6;
+  --background-tilt: #e6e6e6;
   --background-lightbox: rgba(230, 230, 230, 0.7);
 
   --link: #000;
