--- a/src/scss/components/Canvas.scss
+++ b/src/scss/components/Canvas.scss
@@ -1,16 +1,18 @@
 @import "../Theme";
 
 .forceGraph{
-  padding:5px;
+  padding:var(--edge-margin);
   flex: 0 1 125px;
-  margin-right: var(--box-margin);
+  margin-right: var(--edge-margin);
   margin-left: var(--edge-margin);
   border: $tableBorder;
+  position: relative;
 
   .fg{
     max-width:100%!important;
     max-height:100%!important;
     opacity:.8;
+    border: $tableBorder;
 
     .scene-container{
       max-width:100%!important;
@@ -24,4 +26,7 @@
       }
     }
   }
+}
+canvas {
+    aspect-ratio: auto 220 / 210!important;
 }
