--- a/src/scss/components/ContentView.scss
+++ b/src/scss/components/ContentView.scss
@@ -7,7 +7,7 @@
 
   .p-dataview-content{
     z-index: 10;
-    position: sticky;
+    position: absolute;
     background: var(--background-primary);
     width: 100%;
     min-height: 10px; // this causes tabs to overlap correctly, strange that 100% does not work
@@ -23,7 +23,6 @@
       justify-content: flex-end;
       align-items: flex-end;
       margin-right: 4px;
-
     }
   }
 }
@@ -31,15 +30,16 @@
 // Content card
 .cgb-0{
   margin-top: var(--box-margin);
-  margin-right:calc(var(--box-margin));
   border: $cardBorder;
   height: fit-content;
+  margin-right:2px;
+  margin-left: 2px;
 
   .cgb-0-txt{
     padding: var(--box-margin);
     width: 100%;
     height: 100%;
-    min-height: 60px;
+    min-height: 100%;
     overflow-y: hidden;
     overflow-x: hidden;
     white-space: pre-wrap;
@@ -50,6 +50,7 @@
       width: 100%;
       max-height: inherit;
       object-fit: contain;
+      object-position: right;
     }
     .loading{
       height: 146.741px;
@@ -73,7 +74,7 @@
 
 .tab-content-kernal{
   [data-overlayscrollbars=host], [data-overlayscrollbars=viewport] {
-    height:calc(100% - 2px)!important;
+        height: calc(100% + 4px) !important;
     border: $tableBorder!important;
     margin-top: -4px;
   }
