--- a/src/scss/components/LightBox.scss
+++ b/src/scss/components/LightBox.scss
@@ -156,6 +156,10 @@
   height: calc(100% - 52px);
   div{
    height:100%;
+   height: 100%;
+   max-width: 700px;
+   margin: 0 auto;
+
     .tiptap{
       margin:25px;
       height:100%;
