--- a/src/scss/components/MixtapeView.scss
+++ b/src/scss/components/MixtapeView.scss
@@ -1,59 +1,52 @@
 @import "../Theme";
 
-.mixtape-pane{
+.pane-nav{
   margin: var(--box-margin);
   margin-top: var(--edge-margin);
   margin-left: var(--edge-margin);
-  flex: 1 1 auto;
+  flex: 1;
   overflow-y: hidden;
   display: flex;
   flex-direction: column;
+      margin-right: 2px;
+      margin-bottom: var(--edge-margin);
 
-  .folders{
-    height: fit-content;
-    max-height: 20%;
-  }
   .data-grid-splitter{
     width: 100%;
     height:9px;
     opacity: 0.50;
     text-align: center;
   }
-  .mixtapes{
-    flex: 1;
-  }
-}
 
-.mixtapeView{
-  height: calc(100% + 4px);
-  margin-top: -4px;
-  border: $tableBorder;
   [data-overlayscrollbars~=host], [data-overlayscrollbars~=viewport] {
-    height:100%;
+    height: calc(100% + 6px) !important;
+    border: 1px solid var(--border-primary) !important;
+    margin-top: -4px;
   }
+
   .os-scrollbar-vertical {
     left: 0;
     border-right: $tableBorder!important;
     border-top: $tableBorder!important;
   }
-.os-scrollbar-vertical .os-scrollbar-handle {
-    width: 2px!important;
-    transition: none!important;
-    left: 1px;
-}
+
+  .os-scrollbar-vertical .os-scrollbar-handle {
+      width: 2px!important;
+      transition: none!important;
+      left: 1px;
+  }
 
   .p-dataview-content{
-    padding-top: 5px;
     z-index: 10;
-    position: sticky;
+    position: absolute;
     background: var(--background-primary);
+    width: 100%;
+    min-height: 10px;
   }
   .p-dataview, .p-dataview-content{
     height: 100%;
-    padding-top: 2px;
     z-index: 10;
     position: sticky;
-    background: var(--background-primary);
 
     .grid{
       position: relative;
@@ -63,36 +56,63 @@
       flex-wrap: wrap;
     }
   }
-}
 
-// Mixtape card
-.dgb-mixtape{
-  background: var(--background-tilt);
-  backdrop-filter: blur(5px);
-  cursor: pointer;
-  padding-bottom: 1px;
-  padding-left: 1px;
-  border: 1px solid var(--border-primary);
-  width: calc(100% - 8px);
-  margin: 2px;
-  margin-top: 0;
-  margin-left: 6px;
+  // Mixtape card
+  .dgb-nav{
+    background: var(--background-tilt);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+    cursor: pointer;
+    padding-bottom: 1px;
+    padding-left: 1px;
+    border: $cardBorder;
+    width: calc(100% - 8px);
+    margin: 2px;
+    /* margin-top: 4px; */
+    margin-left: 6px;
+    margin-bottom: 0px;
 
-  .descr{
-    opacity: 0.50;
-    letter-spacing: -.33px;
+    .descr{
+      opacity: 0.50;
+      letter-spacing: -.33px;
+    }
+    .title{
+      float: left;
+      width: 100%;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+      letter-spacing: -0.33px;
+    }
   }
-  .title{
-    float: left;
-    width: 100%;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
-    letter-spacing: -0.33px;
-  }
-}
-.dgb-0:last-child{
-  margin-bottom: 40px;
-}
 
+  .dgb-nav:first-child{
+    margin-top: 4px;
+  }
+  .dgb-nav:last-child{
+    margin-bottom: 4px;
+  }
+
+  .nav-loader{
+    background: var(--background-tilt);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+    cursor: pointer;
+    padding-bottom: 1px;
+    padding-left: 1px;
+    border: 1px solid var(--border-primary);
+    width: calc(100% - 8px);
+    margin: 2px;
+    margin-top: 0;
+    margin-left: 6px;
+    height: 36px;
+    position: absolute;
+
+    .nav-loader-icon{
+      height: 100%;
+      width: auto;
+    }
+  }
+
+}
 
