--- a/src/scss/components/Tabs.scss
+++ b/src/scss/components/Tabs.scss
@@ -2,6 +2,9 @@
   display: flex;
   justify-content: space-between;
   position: relative;
+  min-height: 4px;
+  height: -moz-fit-content;
+  height: fit-content;
 
   .tabs-l{
     display: flex;
@@ -23,8 +26,10 @@
   }
 }
 .tabs-content{
-  margin-top: var(--edge-margin);
   width:calc(100% - 4px)!important;
+  flex: none;
+  min-height: 4px;
+  height: fit-content;
 }
 .tab {
   text-align: center;
@@ -42,16 +47,18 @@
   background: var(--background-primary);
 }
 
-.tab-content-mixtape{
-  height: calc(100% - 27px);
-  display: flex;
-  flex-direction: column;
+.tab-content-nav{
+    padding-bottom: var(--edge-margin);
+    height: calc(100% + 6px) !important;
+    flex: 1;
+    min-height: 0;
 }
 
 .tab-content-kernal{
-   height: calc(100% - 19px - (2 * var(--edge-margin)));
-   padding-bottom: var(--edge-margin);
-   margin-right:  var(--edge-margin);
+  padding-bottom: var(--edge-margin);
+  height: calc(100% + 6px) !important;
+  margin-right: var(--edge-margin);
+  flex: 1;
 }
 
 // Current Search and Mixtape info/close
@@ -75,7 +82,48 @@
   padding-top:2px;
 }
 
+.advanced-tabs{
+  margin-bottom: var(--edge-margin);
+}
+.advanced-pane{
+    min-height: 6px;
+        margin-top: var(--edge-margin);
+    margin-bottom: -4px;
+    border: 1px solid var(--border-primary);
+    margin-right: var(--edge-margin);
+    margin-left: var(--edge-margin);
+    flex: none;
+}
 
+.advanced-pane-inner{
+  height: 100%;
+  width: 100%;
+  background: var(--background-primary);
+  z-index: 19;
+  position: relative;
+}
 
+.tab-content-bg{
+    background: #000000;
+    width: 100%;
+    position: absolute;
+    z-index: 6;
+    height: 100%;
+}
 
+.btn-expand{
+  height: 30px;
+  width: 98px;
+  right: -43px;
+  position: absolute;
+  top: -15px;
+  z-index: 20;
+}
+.btn-expand-icon{
+  height: 100%;
+  width: 100%;
+}
+.btn-expanded-icon{
+  transform: rotate(179deg);
+}
 
