--- a/src/scss/helpers/SplitterPanel.scss
+++ b/src/scss/helpers/SplitterPanel.scss
@@ -48,7 +48,7 @@
 .splitpanes__pane {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow: visible!important;
 }
 .splitpanes.default-theme .splitpanes__pane {
     background-color: rgba(0, 0, 0, 0);
@@ -77,4 +77,10 @@
 :root {
     --sidebar-transition-duration: 0!important;
     --sidebar-transition-timing-function: none!important;
+}
+#main-r{
+    display: flex;
+    flex-direction: column;
+    margin-top:2px;
+    padding-bottom:2px;
 }
