--- a/src/scss/Theme.scss
+++ b/src/scss/Theme.scss
@@ -1,8 +1,8 @@
 .theme-dark {
   --edge-margin: 2px;
   --color-scheme: dark;
-  --background-primary: #101010;
-  --background-tilt: #101010;
+  --background-primary: #242424;
+  --background-tilt: #242424;
   --background-lightbox: rgba(0, 0, 0, 0.7);
 
   --text-header: #fe7761;
@@ -22,7 +22,7 @@
   .cgb-0{
     .vue-load-image{
       .thumbnail{
-        filter: brightness(.85) contrast(1);
+        //filter: brightness(.85) contrast(1);
       }
     }
   }
@@ -61,6 +61,9 @@
 }
 .text-main-1{
   color: var(--text-data-descr);
+}
+.default-theme{
+  background-color: var(--background-primary)!important;
 }
 
 $navH:33px;
