refactoring basic working on force graph

--- a/src/scss/Theme.scss
+++ b/src/scss/Theme.scss
@@ -43,6 +43,7 @@
 
   --link: #000;
   --link-visited: #000;
+  --text-header: #fe7761;
   --text-primary: #000;
   --text-descr: rgba(3, 3, 3, 0.7);
   --text-secondary: #516076;
