--- a/src/scss/components/ContentView.scss
+++ b/src/scss/components/ContentView.scss
@@ -53,7 +53,7 @@
       object-position: right;
     }
     .loading{
-      max-height: 120px!important;
+      max-height: 100%!important;
     }
   }
 
