--- a/src/scss/components/LightBox.scss
+++ b/src/scss/components/LightBox.scss
@@ -36,7 +36,7 @@
         max-height: calc(100% );
         white-space: pre-wrap;
       }
-
+globalStore
       .uploader{
         position:relative;
         min-height: calc(100% - 32px);
@@ -196,3 +196,113 @@
   .pdf-app.light {
     --pdf-toolbar-color: white;
   }
+
+.lightbox-info {
+  background: var(--background-lightbox);
+  position:absolute;
+  border: 1px solid var(--border-primary);
+  backdrop-filter: blur(20px);
+  bottom: 50px;
+  left: 50%;
+  transform: translate(-50%, -0);
+  width: 90%;
+  max-width:800px;
+  height: 40%;
+  display:flex;
+
+  .mixCol{
+    display:flex;
+    width:60%;
+    height:100%;
+
+    .select-mix{
+      height:100%;
+      width:50%;
+      border-left:1px solid var(--border-primary);
+      width:50%;
+    }
+  }
+
+  .infoCol{
+    border:1px solid var(--border-mix);
+    width:39%;
+    height:calc(100% - 8px);
+    margin:var(--box-margin);
+    padding:var(--box-margin);
+    overflow: auto;
+
+  .infoBox{
+      width:100%;
+      overflow: hidden;
+      min-height: 16px;
+      white-space: pre-wrap;
+      display:block;
+
+      .info-title{
+        color: var(--text-header);
+      }
+    }
+  }
+
+ .p-dataview{
+    height:100%;
+    width:100%;
+
+    .p-dataview-content{
+      height:100%;
+      width:100%;
+      padding-top:4px;
+      z-index: 10;
+      position: sticky;
+
+      .grid{
+        position:relative;
+        z-index:5;
+        width:100%;
+        max-height:calc(100% );
+        overflow-y:auto;
+        overflow-x:hidden;
+
+        .dgb-0:last-child{
+          margin-bottom:40px;
+        }
+        .dgb-0{
+          position: relative;
+          cursor: pointer;
+          height:fit-content;
+          padding:3px;
+          overflow:hidden;
+          border:1px solid var(--border-mix);
+          width:100%;
+          margin: 4px;
+          margin-top:0;
+          margin-bottom:1px;
+
+          .dgb-0-txt{
+            cursor: pointer;
+            width:100%;
+            margin: 0;
+            border:0;
+            user-select: none;
+            background:none;
+            .descr{
+              color:var(--text-data-title);
+              opacity:.50;
+              font-size:12px;
+            }
+            a{
+              color:var(--text-data-title);
+              font-size:16px;
+              text-align:left;
+              text-overflow: ellipsis;
+              overflow: hidden;
+              white-space: nowrap;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+
