--- a/src/scss/components/SessionManager.scss
+++ b/src/scss/components/SessionManager.scss
@@ -3,10 +3,10 @@
 .login-form{
   text-align: center;
   width:100%;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: relative;
 
   input[type="submit" i]{
     padding-top:1px;
@@ -14,14 +14,14 @@
     padding-left: 6px;
     padding-right:6px;
     outline:0;
-    color:white;
+    color:var(--text-login);
   }
   input{
     margin:3px;
     border: 0;
     background: #00000000;
     outline: 1px solid  var(--border-primary);
-    font-size:20px;
+    font-size:16px;
     font-weight:1;
     border-radius: 0;
     width:202px;
@@ -87,8 +87,6 @@
 }
   .login-ui{
     position: absolute;
-    background: var(--background-lightbox);
-    border: 1px solid var(--border-primary);
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
