optimized add and delete for kernal and mixtapes

--- a/src/scss/Theme.scss
+++ b/src/scss/Theme.scss
@@ -6,7 +6,7 @@
   --background-lightbox: rgba(0, 0, 0, 0.7);
 
   --text-header: #fe7761;
-  --text-data-title: #f8ceff;
+  --text-data-title: #d66a3f;
   --text-data-descr: #DAC181;
   --text-content: rgba(255, 255, 255, 0.86);
   --text-content-descr: rgba(255, 255, 255, 0.6);
