--- a/src/scss/components/MixtapeView.scss
+++ b/src/scss/components/MixtapeView.scss
@@ -14,7 +14,7 @@
   .data-grid-splitter{
     width: 100%;
     height:9px;
-    opacity: 0.50;
+    opacity: 0.42;
     text-align: center;
   }
 
@@ -114,5 +114,9 @@
     }
   }
 
+}
+.mix-feed-icon{
+  height:18px;
+  width:40px;
 }
 
