--- a/src/scss/components/LightBox.scss
+++ b/src/scss/components/LightBox.scss
@@ -28,6 +28,10 @@
       max-width: 100%;
       max-height: 100%;
       overflow:hidden;
+      display: flex;
+      align-items: flex-end;
+      flex-direction: column;
+      justify-content: flex-end;
 
       .pdf{
         position:relative;
@@ -36,7 +40,7 @@
         max-height: calc(100% );
         white-space: pre-wrap;
       }
-globalStore
+
       .uploader{
         position:relative;
         min-height: calc(100% - 32px);
@@ -72,15 +76,7 @@ globalStore
           background:none;
         }
 
-        #textEditor{
-          position:relative;
-          min-height:80%;
 
-          .tiptap{
-            position:relative;
-            height:100%;
-          }
-        }
       }
 
       .pdf{
@@ -102,7 +98,6 @@ globalStore
         height:100%;
         max-height: calc(100% );
         max-width: calc(100% );
-        padding:10px;
         white-space: pre-wrap;
         overflow-y:hidden;
 
@@ -153,23 +148,35 @@ globalStore
 
 
 .txt{
-  height: calc(100% - 52px);
+  max-height: calc(100cqh - 30px) !important;
+  position: inherit !important;
+
   div{
-   height:100%;
-   height: 100%;
-   max-width: 700px;
-   margin: 0 auto;
+    max-width: 700px;
+    margin: 0 auto;
 
     .tiptap{
       margin:25px;
       height:100%;
       overflow-y:auto;
+
       p{
         margin:0;
       }
     }
   }
 }
+        #textEditor{
+          position:relative;
+          min-height:80%;
+          max-height: calc(100cqh - 30px) !important;
+          container-type: size;
+
+          .tiptap{
+            position:relative;
+            height: calc(100cqh - 50px);
+          }
+        }
 
 #savekernal{
   position:fixed;
