--- a/src/scss/helpers/EditView.scss
+++ b/src/scss/helpers/EditView.scss
@@ -2,59 +2,73 @@
 .overlay{
   position:fixed;
   top:0;
+  left: 0;
   width:100%;
   height:100%;
-  z-index: 15;
+  z-index: 25;
   background: var(--lightbox-back);
+  container-type: size;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   -webkit-backdrop-filter: blur(14px);
-  backdrop-filter: blur(14px);
+  backdrop-filter: blur(34px);
 
   .edit-mixtape{
-    position: absolute;
     background: var(--background-lightbox);
-    border: 1px solid var(--border-primary);
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 20;
-    height: 50px;
+    border: 1px solid var(--border-overlay);
+    height: fit-content;
     width: 500px;
+    max-width: calc(100cqw - 2 * var(--box-margin));
+    outline: 1px solid var(--scrollbar);
+    outline-offset: var(--edge-margin);
 
-    .editor{
-      background: var(--background-lightbox);
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      position: relative;
-      border: 1px solid var(--border-primary);
-
-      .add-mixtape-title{
-        background: var(--background-lightbox);
-        border-bottom: 1px solid var(--border-primary);
-        width:100%;
-      }
+    .add-mixtape-title{
+      border-bottom: 1px solid var(--border-overlay);
+      width:100%;
+      display: flex;
+      flex-direction: row;
     }
+
+
     .add-mixtape-options{
-      background: var(--background-lightbox);
       color: var(--text-data-title);
       width: 100%;
       display: flex;
+    }
+  }
+}
 
       .option{
-        background: var(--background-lightbox);
         color: var(--text-data-title);
         width:50%;
         text-align: center;
-        font-size:13px;
-        padding:2px;
+        font-size:18px;
       }
       .option:last-child{
-        border-left: 1px solid var(--border-primary);
+        border-right: none;
       }
-      .option:first-child{
-        border-right: 1px solid var(--border-primary);
+      .option{
+        border-right: 1px solid var(--border-overlay);
       }
+    .editor{
+      position: relative;
+      border: 1px solid var(--border-overlay);
+
     }
-  }
+
+
+.edit-opt{
+  padding: var(--box-margin);
+  font-size: 18px;
+}
+
+.input-name{
+  border-right: 1px solid var(--border-overlay);
+  color: var(--scrollbar);
+}
+
+.input-name-static{
+  color: var(--scrollbar);
 }
 
