--- a/src/scss/helpers/UploadBox.scss
+++ b/src/scss/helpers/UploadBox.scss
@@ -13,10 +13,9 @@
   position: absolute;
   left: 0px;
   top: 0px;
-  background: var(--background-lightbox);
-  -webkit-backdrop-filter: blur(20px);
-  backdrop-filter: blur(20px);
-  border: 1px solid var(--border-primary);
+  -webkit-backdrop-filter: blur(34px);
+  backdrop-filter: blur(34px);
+  border:1px solid var(--border-overlay);
   z-index: 20;
   margin:4px;
   width: calc(100% - 9px);
@@ -30,17 +29,9 @@
         text-align: center;
         cursor: pointer;
         z-index:10!important;
-        border-top:1px solid var(--border-primary);
+        border-top:1px solid var(--border-overlay);
         display:flex;
-        a {
-          color: var(--link)
-        }
-        a:link {
-          color:  var(--link)
-        }
-        a:visited {
-          color:  var(--link)
-        }
+
         .navItem{
           color: var(--text-header);
           text-align: center;
@@ -48,7 +39,7 @@
           flex-grow: 1;
           padding-right:1px;
           padding-left:1px;
-          border-right:1px solid var(--border-primary);
+          border-right:1px solid var(--border-overlay);
         }
         .navItem:last-child{
           border-right:0;
@@ -62,6 +53,7 @@
         height: calc(100% - 32px);
         white-space: pre-wrap;
         overflow-y:auto;
+        container-type: size;
 
         #fileSelect{
           position:absolute;
@@ -70,7 +62,8 @@
           transform: translate(-50%, -50%);
 
           .file-upload{
-            max-width: 163px;
+            max-width: 300px;
+            width: 100vw;
           }
 
           input::file-selector-button {
@@ -90,12 +83,25 @@
         }
 
         #textEditor{
-          position:relative;
           min-height:80%;
+          height: 100cqh !important;
+          max-height:100cqh !important;
+          display: flex;
+          justify-content: safe center;
+          align-items: safe center;
 
+          .ProseMirror{
+            background: var(--background-lightbox);
+            outline: 1px solid var(--border-overlay) !important;
+            width: 1394.68px;
+            max-width: calc(100cqw - 50px);
+            outline-offset: var(--box-margin);
+            padding: var(--box-margin);
+            padding-top: 0;
+            margin: 25px;
+          }
           .tiptap{
             position:relative;
-            height:100%;
           }
         }
       }
@@ -104,6 +110,8 @@
 
   .uploader{
     width:100%;
+    container-type: size;
+
     .add-mixtape-title{
       border-bottom: 1px solid var(--border-primary);
       width:100%;
@@ -128,7 +136,11 @@
 }
 
 .txt{
-  height: calc(100% - 52px);
+  height: 100cqh;
+  width: 100cqw;
+  position: absolute;
+  overflow: auto;
+
   div{
    height:100%;
     .tiptap{
