--- a/src/scss/Typography.scss
+++ b/src/scss/Typography.scss
@@ -30,6 +30,10 @@
   line-height:18px;
 }
 
+.mtl-ml {
+    font-size: 18px;
+}
+
 @media screen and (max-width: 400px), screen and (max-height: 400px) {
   .font-s-title {
     font-size:15px;
