Major upgrade. migrated to vite, and vue3

--- a/src/scss/Theme.scss
+++ b/src/scss/Theme.scss
@@ -10,7 +10,7 @@
   --background-lightbox: rgba(0, 0, 0, 0.7);
 
   --text-header: #fe7761;
-  --text-data-title: #ffa885;
+  --text-data-title: #ffc83d;
   --text-data-descr: #DAC181;
   --text-content: rgba(255, 255, 255, 0.86);
   --text-content-descr: rgba(255, 255, 255, 0.6);
