--- a/src/scss/Typography.scss
+++ b/src/scss/Typography.scss
@@ -34,6 +34,11 @@
     font-size: 18px;
 }
 
+.text-content-0{
+  font-size:18px;
+  line-height:18px;
+}
+
 @media screen and (max-width: 400px), screen and (max-height: 400px) {
   .font-s-title {
     font-size:15px;
